--- a/anvio/data/interactive/pangraph.html
+++ b/anvio/data/interactive/pangraph.html
@@ -14,6 +14,7 @@
     <link type="text/css" rel="stylesheet" href="css/pangraph.css" />
     <link rel="shortcut icon" href="#">
     <link href="./node_modules/sortable-tablesort/sortable.min.css" rel="stylesheet">
+    <script type="text/javascript" src="js/error.js"></script>
     <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js" onerror='alertDependencyError("jquery-core")'></script>
     <script type="text/javascript" src="./node_modules/html5sortable/dist/html5sortable.min.js" onerror='alertDependencyError("html5sortable")'></script>
 
