--- a/anvio/data/interactive/pangraph.html
+++ b/anvio/data/interactive/pangraph.html
@@ -457,10 +457,20 @@
                         <div class="col-2">
                         </div>
                         <div class="col-8 d-flex align-items-center">
-                          Pangenome Graph angle
+                          Pangenome Graph start angle
                         </div>
                         <div class="d-flex col-2">
-                          <input type="text" class="form-control float-end text-end flex-fill p-0 border-0" style= "background-color: #e9ecef;" id="angle" name="angle" value=0 aria-label="..." data-toggle="tooltip" data-placement="top" title="Choose your color">
+                          <input type="text" class="form-control float-end text-end flex-fill p-0 border-0" style= "background-color: #e9ecef;" id="start_angle" name="start_angle" value=0 aria-label="..." data-toggle="tooltip" data-placement="top" title="Choose your color">
+                        </div>
+                      </div>
+                    <div class="col-12 d-flex mb-1">
+                        <div class="col-2">
+                        </div>
+                        <div class="col-8 d-flex align-items-center">
+                          Pangenome Graph end angle
+                        </div>
+                        <div class="d-flex col-2">
+                          <input type="text" class="form-control float-end text-end flex-fill p-0 border-0" style= "background-color: #e9ecef;" id="end_angle" name="end_angle" value=0 aria-label="..." data-toggle="tooltip" data-placement="top" title="Choose your color">
                         </div>
                       </div>
                     <div class="col-12 d-flex mb-1">
