new tree drawing algorithm

--- a/anvio/data/interactive/pangraph.html
+++ b/anvio/data/interactive/pangraph.html
@@ -585,14 +585,14 @@
                         <i class="bi bi-arrow-down-square fa-lg bin-icon-size" aria-hidden="true"></i>
                         <span class="font-weight-normal">Store bins</span>
                       </button>
-                      <button type="button" class="col-3 btn btn-outline-secondary btn-md align-items-center justify-content-center" id="bininfo">
+                      <button type="button" class="col-6 btn btn-outline-secondary btn-md align-items-center justify-content-center" id="bininfo">
                         <i class="bi bi-info-square fa-lg bin-icon-size" aria-hidden="true"></i>
                         <span class="font-weight-normal">Bin info</span>
                       </button>
-                      <button type="button" class="col-3 btn btn-outline-secondary btn-md align-items-center justify-content-center" id="binanalyse">
+                      <!-- <button type="button" class="col-6 btn btn-outline-secondary btn-md align-items-center justify-content-center" id="binanalyse">
                         <i class="bi bi-info-square fa-lg bin-icon-size" aria-hidden="true"></i>
                         <span class="font-weight-normal">Analyze bins</span>
-                      </button>
+                      </button> -->
                     </div>
                   </div>
                 </div>
