--- a/anvio/data/interactive/pangraph.html
+++ b/anvio/data/interactive/pangraph.html
@@ -413,6 +413,16 @@
                           <input type="text" class="form-control float-end text-end flex-fill p-0 border-0" style= "background-color: #e9ecef;" id="label" name="label" value=0 aria-label="..." data-toggle="tooltip" data-placement="top" title="Choose your color">
                         </div>
                       </div>
+                    <div class="col-12 d-flex mb-1">
+                        <div class="col-2 d-flex align-items-center">
+                        </div>
+                        <div class="col-8 d-flex align-items-center">
+                          Label offset
+                        </div>
+                        <div class="d-flex col-2">
+                          <input type="text" class="form-control float-end text-end flex-fill p-0 border-0" style= "background-color: #e9ecef;" id="label_offset" name="label_offset" value=0 aria-label="..." data-toggle="tooltip" data-placement="top" title="Choose your color">
+                        </div>
+                      </div>
                       <div class="col-12 d-flex mb-1">
                         <div class="col-2 d-flex align-items-center">
                         </div>
