quality of life

--- a/anvio/data/interactive/pangraph.html
+++ b/anvio/data/interactive/pangraph.html
@@ -757,7 +757,7 @@
       <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title border-bottom-0" style="font-size: x-large;">Synteny gene cluster summary</h5>
+            <h5 class="modal-title border-bottom-0 settings-header" style="font-size: x-large;">Synteny gene cluster summary</h5>
             <!-- <button type="button" class="close d-flex" data-dismiss="modal" aria-label="Close" aria-hidden="true">
               <i class="bi bi-x-lg"></i>
             </button> -->
@@ -788,7 +788,7 @@
       <div class="modal-dialog modal-dialog-centered modal-xs">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title border-bottom-0" style="font-size: large;">Store bin collection</h5>
+            <h5 class="modal-title border-bottom-0 settings-header" style="font-size: x-large;">Store bin collection</h5>
             <!-- <button type="button" class="close d-flex" data-dismiss="modal" aria-label="Close" aria-hidden="true">
               <i class="bi bi-x-lg"></i>
             </button> -->
@@ -813,7 +813,7 @@
       <div class="modal-dialog modal-dialog-centered modal-xs">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title border-bottom-0" style="font-size: large;">Store state</h5>
+            <h5 class="modal-title border-bottom-0 settings-header" style="font-size: x-large;">Store state</h5>
             <!-- <button type="button" class="close d-flex" data-dismiss="modal" aria-label="Close" aria-hidden="true">
               <i class="bi bi-x-lg"></i>
             </button> -->
@@ -838,7 +838,7 @@
       <div class="modal-dialog modal-dialog-centered modal-xs">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title border-bottom-0" style="font-size: large;">Load bin collection</h5>
+            <h5 class="modal-title border-bottom-0 settings-header" style="font-size: x-large;">Load bin collection</h5>
             <!-- <button type="button" class="close d-flex" data-dismiss="modal" aria-label="Close" aria-hidden="true">
               <i class="bi bi-x-lg"></i>
             </button> -->
@@ -863,7 +863,7 @@
       <div class="modal-dialog modal-dialog-centered modal-xs">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title border-bottom-0" style="font-size: large;">Load state</h5>
+            <h5 class="modal-title border-bottom-0 settings-header" style="font-size: x-large;">Load state</h5>
             <!-- <button type="button" class="close d-flex" data-dismiss="modal" aria-label="Close" aria-hidden="true">
               <i class="bi bi-x-lg"></i>
             </button> -->
