fixy global x calculation

--- a/anvio/data/interactive/pangraph.html
+++ b/anvio/data/interactive/pangraph.html
@@ -111,11 +111,11 @@
                           <li class="nav-bottom-alignment">
                               <p class="side-menu-text">State</p>
                               <li class="nav-bottom-alignment">
-                                  <a href="" class="navbar-btn d-block glow-on-hover" id="stateload" data-help="draw-button" onclick="return false;">
+                                  <a href="" class="navbar-btn d-block" id="stateload" data-help="draw-button" onclick="return false;">
                                       <i class="icon-unlock bi bi-upload fs-2x"></i><span class="d-block">Load</span>
                                   </a>
                               </li>
-                              <li class="nav-bottom-alignment"><a href="" class="navbar-btn d-block glow-on-hover" id="statesave" data-help="draw-button" onclick="return false;"><i class="icon-unlock bi bi-download fs-2x"></i><span class="d-block">Save</span> </a></li>
+                              <li class="nav-bottom-alignment"><a href="" class="navbar-btn d-block" id="statesave" data-help="draw-button" onclick="return false;"><i class="icon-unlock bi bi-download fs-2x"></i><span class="d-block">Save</span> </a></li>
                           </li>
                           <hr class="nav-bottom-alignment border-color">
                           <p class="side-menu-text nav-bottom-alignment">Display</p> 
