--- a/anvio/data/interactive/pangraph.html
+++ b/anvio/data/interactive/pangraph.html
@@ -755,7 +755,7 @@
 
     <div class="modal fade" id="InfoModal" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
       <div class="modal-dialog modal-dialog-centered modal-xl">
-        <div class="modal-content">
+        <div class="modal-content modal-content-large">
             <div class="modal-header">
             <h5 class="modal-title border-bottom-0 settings-header" style="font-size: x-large;">Synteny gene cluster summary</h5>
             <!-- <button type="button" class="close d-flex" data-dismiss="modal" aria-label="Close" aria-hidden="true">
@@ -785,8 +785,8 @@
     </div>
 
     <div class="modal fade" id="SaveBin" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered modal-xs">
-        <div class="modal-content">
+      <div class="modal-dialog modal-dialog-centered modal">
+        <div class="modal-content modal-content-small">
           <div class="modal-header">
             <h5 class="modal-title border-bottom-0 settings-header" style="font-size: x-large;">Store bin collection</h5>
             <!-- <button type="button" class="close d-flex" data-dismiss="modal" aria-label="Close" aria-hidden="true">
@@ -810,33 +810,35 @@
     </div>
       
     <div class="modal fade" id="SaveState" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered modal-xs">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title border-bottom-0 settings-header" style="font-size: x-large;">Store state</h5>
-            <!-- <button type="button" class="close d-flex" data-dismiss="modal" aria-label="Close" aria-hidden="true">
-              <i class="bi bi-x-lg"></i>
-            </button> -->
-          </div>
-             <div class="modal-body overflow-auto" id="SaveStateBody">
-          </div>
-          <div class="modal-footer d-flex justify-content-center" id="SaveStateFooter">
-            <div class="d-flex btn-group">
-              <button class="btn btn-outline-success" id="SaveStateButton">
-                <i class="bi bi-download"> Save</i>
-              </button>
-              <button class="btn btn-outline-danger" data-dismiss="modal" aria-label="Close" aria-hidden="true">
-                  <i class="bi bi-x-lg">Close</i>
-                </button>
+        <div class="modal-dialog modal-dialog-centered modal">
+            <div class="modal-content modal-content-small">
+                <div class="modal-header">
+                    <h5 class="modal-title border-bottom-0 settings-header" style="font-size: x-large;">Store state</h5>
+                </div>
+                <div class="modal-body overflow-auto" id="SaveStateBody">
+                    <div class="col-12 d-flex mb-1">
+                        <div class="col-12 d-flex align-items-center">
+                            <select class="form-select" aria-label="Default select example">
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer d-flex justify-content-center" id="SaveStateFooter">
+                    <div class="d-flex btn-group">
+                        <button class="btn btn-outline-success" id="SaveStateButton">
+                            <i class="bi bi-download"> Save</i>
+                        </button>
+                        <button class="btn btn-outline-danger" data-dismiss="modal" aria-label="Close" aria-hidden="true">
+                            <i class="bi bi-x-lg">Close</i>
+                        </button>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
 
     <div class="modal fade" id="LoadBin" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered modal-xs">
-        <div class="modal-content">
+      <div class="modal-dialog modal-dialog-centered modal">
+        <div class="modal-content modal-content-small">
           <div class="modal-header">
             <h5 class="modal-title border-bottom-0 settings-header" style="font-size: x-large;">Load bin collection</h5>
             <!-- <button type="button" class="close d-flex" data-dismiss="modal" aria-label="Close" aria-hidden="true">
@@ -860,8 +862,8 @@
     </div>
       
     <div class="modal fade" id="LoadState" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered modal-xs">
-        <div class="modal-content">
+      <div class="modal-dialog modal-dialog-centered modal">
+        <div class="modal-content modal-content-small">
           <div class="modal-header">
             <h5 class="modal-title border-bottom-0 settings-header" style="font-size: x-large;">Load state</h5>
             <!-- <button type="button" class="close d-flex" data-dismiss="modal" aria-label="Close" aria-hidden="true">
@@ -886,7 +888,7 @@
 
     <div class="modal fade" id="BinAnalyse" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
       <div class="modal-dialog modal-dialog-centered modal-xl">
-        <div class="modal-content">
+        <div class="modal-content modal-content-large">
           <!-- <div class="modal-header">
             <h5 class="modal-title border-bottom-0" id="BinModalTitle">Bin Information</h5>
             <button type="button" class="close d-flex" data-dismiss="modal" aria-label="Close" aria-hidden="true">
