no more splits / contigs: call items until certain

--- a/anvio/data/interactive/index.html
+++ b/anvio/data/interactive/index.html
@@ -854,7 +854,7 @@
                                             <th data-defaultsort='disabled'><span class="new-bin-icon bi bi-plus-circle-fill fa-lg" aria-hidden="true" alt="Add bins" title="Add bins" onClick="bins.NewBin();"></span></th>
                                             <th class="text-center"></th>
                                             <th>Name</th>
-                                            <th id="splits_title">Splits</th>
+                                            <th id="items_title">Items</th>
                                             <th id="len_title">Len</th>
                                             <th id="completion_title" title="Completion">Comp.</th>
                                             <th id="redundancy_title" title="Redundancy">Red.</th>
