fix the behavior of 'collapse'
this works well, and shows a nice table now when there are collapsed
items in a given tree on screen.

--- a/anvio/data/interactive/index.html
+++ b/anvio/data/interactive/index.html
@@ -226,6 +226,10 @@
                                                     </div>
                                                 </div>
                                         </div>
+                                        <div class="form-group form-margin" id="collapsed_nodes_wrapper" style="display: none;">
+                                                <label class="settings-label" for="collapsed_nodes_panel">Collapsed nodes</label>
+                                                <div class="col-10 menu-padding" id="collapsed_nodes_panel"></div>
+                                        </div>
                                         <div class="form-group form-margin">
                                                 <label class="settings-label" for="views_container" data-help="view">Data</label>
                                                 <div class="col-10 menu-padding">
