--- a/anvio/data/interactive/contigs.html
+++ b/anvio/data/interactive/contigs.html
@@ -209,7 +209,7 @@
 
         function create_table() {
             var table_str = "";
-            table_str += create_table_header('Contigs Stats');
+            table_str += create_table_header('Contig Stats');
             table_str += array_to_table(tables['basic_stats'], 'No Basic Stats Found');
             table_str += create_table_header('Gene Stats');
             table_str += array_to_table(tables['gene_stats'] || [], 'No Gene Stats Found');
